this is a broken version. i got it wrong. i commit it just to roll back to a earlier version.

--- a/Renren-Filter/manifest.json
+++ b/Renren-Filter/manifest.json
@@ -1,18 +1,8 @@
 {
-    "background": {
-        "persistent": false, 
-        "scripts": [
-            "background.js"
-        ]
-    }, 
     "content_scripts": [
         {
-            "css": [
-                "mystyles.css"
-            ], 
             "js": [
-                "jquery.js", 
-                "myscript.js"
+                "contentscripts.js"
             ], 
             "matches": [
                 "http://www.renren.com/*"
