Revert "this is a broken version. i got it wrong. i commit it just to roll back to a earlier version."
This reverts commit 5bfd029f3a1b754a80a71a7c9daa7ffb34a0d725.

--- a/Renren-Filter/manifest.json
+++ b/Renren-Filter/manifest.json
@@ -1,8 +1,18 @@
 {
+    "background": {
+        "persistent": false, 
+        "scripts": [
+            "background.js"
+        ]
+    }, 
     "content_scripts": [
         {
+            "css": [
+                "mystyles.css"
+            ], 
             "js": [
-                "contentscripts.js"
+                "jquery.js", 
+                "myscript.js"
             ], 
             "matches": [
                 "http://www.renren.com/*"
