working version. properly using content script to replace old method. finally got gid of tons of '\'s.

--- a/Renren-Inspector/manifest.json
+++ b/Renren-Inspector/manifest.json
@@ -1,16 +1,16 @@
 {
-    "background": {
-        "persistent": false, 
-        "scripts": [
-            "background.js"
-        ]
-    }, 
+    "content_scripts": [
+        {
+            "js": [
+                "contentscript.js"
+            ], 
+            "matches": [
+                "http://www.renren.com/*"
+            ]
+        }
+    ], 
     "description": "Displays data-stype value at right bottom corner of every news feed on renren.com", 
     "manifest_version": 2, 
     "name": "Renren Inspector", 
-    "permissions": [
-        "tabs", 
-        "http://www.renren.com/*"
-    ], 
     "version": "1.0"
 }
