--- a/Renren-Filter/manifest.json
+++ b/Renren-Filter/manifest.json
@@ -1,16 +1,16 @@
 {
-    "background": {
-        "persistent": false, 
-        "scripts": [
-            "background.js"
-        ]
-    }, 
+    "content_scripts": [
+        {
+            "js": [
+                "contentscript.js"
+            ], 
+            "matches": [
+                "http://www.renren.com/*"
+            ]
+        }
+    ], 
     "description": "Filter out the specified content from renren.com homepage", 
     "manifest_version": 2, 
     "name": "Renren Filter", 
-    "permissions": [
-        "tabs", 
-        "http://www.renren.com/*"
-    ], 
     "version": "1.0"
 }
