now the script automatically downloads the latest list from the gist each time.

--- a/Renren-Inspector/manifest.json
+++ b/Renren-Inspector/manifest.json
@@ -12,5 +12,8 @@
     "description": "Displays data-stype value at right bottom corner of every news feed on renren.com", 
     "manifest_version": 2, 
     "name": "Renren Inspector", 
+    "permissions": [
+        "https://api.github.com/*"
+    ], 
     "version": "1.0"
 }
